ontol/ontol-compiler/test-cases/error/parser/def1.on
def // ERROR parse error: expected symbol, found end of file
